 [package]
     name = "unwrap-unreachable"
  version = "0.1.0"
  authors = ["Catherine(Centri3)"]
  edition = "2021"
  description = "A combination of `unwrap` and the `unreachable!` macro."
  repository = "https://github.com/Centri3/unwrap-unreachable"
  license = "MIT OR Apache-2.0"
  # TODO
  keywords = []
  # TODO
  categories = []

 [features]
  std = []
  windows = ["dep:windows", "std"]

 [dependencies]
  paste = "1.0.12"

 [dependencies.windows]
   version = "0.48.0"
  optional = true
  features = ["Win32_Foundation"]
